--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,9 +117,9 @@ jobs:
       - name: Build and publish image to quay.io
         if: github.event_name == 'push'
         env:
-          QUAY_USER_NAME: ${{ secrets.QUAY_RHACS_ENG_FM_RW_USERNAME }}
-          QUAY_USER_PASSWORD: ${{ secrets.QUAY_RHACS_ENG_FM_RW_PASSWORD }}
-          QUAY_ORG_NAME: rhacs-eng
+          QUAY_USER: ${{ secrets.QUAY_RHACS_ENG_FM_RW_USERNAME }}
+          QUAY_TOKEN: ${{ secrets.QUAY_RHACS_ENG_FM_RW_PASSWORD }}
+          QUAY_IMAGE_REPOSITORY: rhacs-eng/fleet-manager
         run: |
           chmod +x ./build_deploy.sh
           ./build_deploy.sh
