--- a/dev/config/dataplane-cluster-configuration-minikube.yaml
+++ b/dev/config/dataplane-cluster-configuration-minikube.yaml
@@ -12,29 +12,24 @@
 #    region: us-east-1
 #    multi_az: true
 #    schedulable: true
-#    dinosaur_instance_limit: 2
+#    central_instance_limit: 2
 #    status: "cluster_provisioning" #Valid values are `cluster_provisioning`, `cluster_provisioned` and `ready`. `cluster_provisioning` will be used if not specified.
 #    provider_type: "ocm" #Valid values are `ocm` and `standalone`. `ocm` will be used if not specified.
-#    cluster_dns: apps.example.com #Valid cluster DNS. This will be used to build dinosaur host url and to communicate with standalone clusters. Required when "provider_type" is "standalone" 
+#    cluster_dns: apps.example.com #Valid cluster DNS. This will be used to build central host url and to communicate with standalone clusters. Required when "provider_type" is "standalone" 
 #    supported_instance_type: "eval" # could be "eval", "standard" or both i.e "standard,eval" or "eval,standard". Defaults to "standard,eval" if not set 
 clusters:
-#  - name: docker-desktop  # Uncomment if using docker-desktop
-#    cluster_id: 1234567890abcdef1234567890abcdef
-#    cloud_provider: standalone
-#    region: standalone
-#    schedulable: true
-#    status: ready
-#    provider_type: standalone
-#    supported_instance_type: "eval,standard"
-#    cluster_dns: kubernetes.docker.internal
-#    dinosaur_instance_limit: 5
  - name: minikube  # Uncomment if using minikube
    cluster_id: 1234567890abcdef1234567890abcdef
    cloud_provider: standalone
    region: standalone
    schedulable: true
    status: ready
-   dinosaur_instance_limit: 5
+   central_instance_limit: 5
    provider_type: standalone
    supported_instance_type: "eval,standard"
    cluster_dns: cluster.local
+   available_central_operator_versions:
+    - version: "0.1.0"
+      ready: true
+      central_versions:
+       - version: "0.1.0"
