--- a/dev/env/.envrc
+++ b/dev/env/.envrc
@@ -1,2 +1,6 @@
 export OCM_TOKEN=$(ocm token)
 export PATH="$(git rev-parse --show-toplevel)/scripts:$PATH"
+export GITROOT="$(git rev-parse --show-toplevel)"
+export POSTGRES_PASSWORD=$(cat "${GITROOT}/secrets/db.password")
+export POSTGRES_USER=$(cat "${GITROOT}/secrets/db.user")
+export POSTGRES_DB=$(cat "${GITROOT}/secrets/db.name")
