--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -492,6 +492,36 @@ objects:
       observability-config-access.token: badger
       image-pull.dockerconfigjson: badger
       kubeconfig: badger
+  - apiVersion: v1
+    kind: ConfigMap
+    metadata:
+      name: fake-fleet-manager-secret
+    data:
+      ocm-service.clientId: badger
+      ocm-service.clientSecret: badger
+      ocm-service.token: badger
+      sentry.key: badger
+      aws.accesskey: badger
+      aws.accountid: badger
+      aws.secretaccesskey: badger
+      keycloak-service.clientId: badger
+      keycloak-service.clientSecret: badger
+      osd-idp-keycloak-service.clientId: badger
+      osd-idp-keycloak-service.clientSecret: badger
+      aws.route53accesskey: badger
+      aws.route53secretaccesskey: badger
+      observability-config-access.token: badger
+      image-pull.dockerconfigjson: badger
+      kubeconfig: badger
+  - apiVersion: v1
+    kind: ConfigMap
+    metadata:
+      name: fake-fleet-manager-observatorium-secret
+    data:
+      logs.clientId: badger
+      logs.clientSecret: badger
+      metrics.clientId: badger
+      metrics.clientSecret: badger
   - kind: Deployment
     apiVersion: apps/v1
     metadata:
@@ -568,8 +598,8 @@ objects:
             emptyDir:
               medium: Memory
           - name: fleet-manager-observatorium-configuration-red-hat-sso
-            secret:
-              secretName: fleet-manager-observatorium-configuration-red-hat-sso
+            configMap:
+              name: fake-fleet-manager-observatorium-secret
           initContainers:
           - name: migration
             image: ${IMAGE_REGISTRY}/${IMAGE_REPOSITORY}:${IMAGE_TAG}
